[package]
name = "credentials"
version = "0.1.0"
description = "Verifiable credentials and badges smart contract"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
common-utils = { path = "../common-utils/contract" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
stellar-xdr = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
